# moderncpp

./: .clang-format  CMakeLists.txt  DownloadProject.cmake  main.cpp
learning_gtest/: CMakeLists.txt  SomeClassToTest.cpp  main_tests.cpp
learning_modern_cpp/: CMakeLists.txt  SomeClassToTest.h  main.cpp
statistics_storage/: CMakeLists.txt  StatisticsStorage.cpp  StatisticsStorage.h  TempStatistics.cpp  TempStatistics.h  main.cpp
